--- a/_includes/mathjax.html
+++ b/_includes/mathjax.html
@@ -1,4 +1,3 @@
-{% if page.mathjax %}
 <script type="text/x-mathjax-config">
   MathJax.Hub.Config({
     tex2jax: {
@@ -7,16 +6,7 @@
     }
   });
 </script>
-<script
-  type="text/javascript"
-  charset="utf-8"
-  src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"
->
+
+<script type="text/javascript" async
+  src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML">
 </script>
-<script
-  type="text/javascript"
-  charset="utf-8"
-  src="https://tkclough.github.io/javascripts/MathJaxLocal.js"
->
-</script>
-{% endif %}
